--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>McFly Family Values</title>
-		<link rel="stylesheet" type="text/css"style.css>
+		<link rel="stylesheet" type="text/css"styles.css>
 	</head>
 	<body>
 			<article id="post">
